# SigmaMatch

./: .gitignore  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  log_generator.py  log_parsers.py  matcher.py  models.py  parser.py  validators.py
backend/app/tests/: bulk_test.py  test_matcher.py
backend/static/: index.html
samples/logs/: linux_auth.csv  linux_auth.ndjson  okta_events.json  sysmon_event1.json  windows_security.xml
samples/rules/: linux_ssh_failed_login.yml  okta_user_locked_out.yml  windows_powershell_contains.yml
